--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node api/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "builds": [
+      {
+        "src": "api/server.js",
+        "use": "@vercel/node"
+      }
+    ]
   },
   "keywords": [],
   "author": "",
